2011-12-02  Ulrich Drepper  <drepper@gmail.com>

	* nscd/aicache.c (addhstaiX): Avoid unused variable warning.

2011-11-29  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/sh/bits/atomic.h (rNOSP): Define
	conditional on GCC version.
	(__arch_compare_and_exchange_val_8_acq)
	(__arch_compare_and_exchange_val_16_acq)
	(__arch_compare_and_exchange_val_32_acq, atomic_exchange_and_add)
	(atomic_add, atomic_add_negative, atomic_add_zero, atomic_bit_set)
	(atomic_bit_test_set): Use rNOSP instead of "r" constraints.

2011-12-02  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/sh/backtrace.c: New file.

2011-12-02  Andreas Schwab  <schwab@redhat.com>

	* misc/bits/select2.h (__FD_ELT): Mark as extension.  Add
	parenthesis.

2011-12-01  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/futimes.c: Truncate time values when
	falling back to utime.

2011-11-30  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/s390/fpu/libm-test-ulps: Relax cpow (2 + 3 i, 4 + 0 i)
	expectations for float.

2011-11-29  Andreas Schwab  <schwab@redhat.com>

	* locale/weight.h (findidx): Add parameter len.
	* locale/weightwc.h (findidx): Likewise.
	* posix/fnmatch_loop.c (FCT): Adjust caller.
	* posix/regcomp.c (build_equiv_class): Likewise.
	* posix/regex_internal.h (re_string_elem_size_at): Likewise.
	* posix/regexec.c (check_node_accept_bytes): Likewise.
	* string/strcoll_l.c (STRCOLL): Likewise.
	* string/strxfrm_l.c (STRXFRM): Likewise.

2011-11-17  Ulrich Drepper  <drepper@gmail.com>

	* Makefile.in: Remove CVSOPT handling.
	* configure.in: Remove use of AC_REVISION.
	* iconvdata/Makefile (distribute): No need to filter out CVS.
	* scripts/list-sources.sh: Remove CVS, subversion and monotone
	handling.

2011-11-16  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/i386/i686/multiarch/strcmp-ssse3.S
	[USE_AS_STRCASECMP_L]: Fix argument offsets for non-PIC.
	[USE_AS_STRNCASECMP_L]: Likewise.
	(__strcasecmp_ssse3, __strncasecmp_ssse3): Handle