@@ -1,5 +1,8 @@
 2011-12-02  Ulrich Drepper  <drepper@gmail.com>
 
+	* nis/nis_findserv.c (__nis_findfastest_with_timeout): Avoid aliasing
+	problem.
+
 	* nscd/aicache.c (addhstaiX): Avoid unused variable warning.
 
 2011-11-29  Joseph Myers  <joseph@codesourcery.com>
